# table_booking_chatbot

./: .gitignore  CMakeLists.txt  README.md  ReadMe.txt  bot_server.c  client.c  header.h  storage.h
basic_socket_functions/: CMakeLists.txt  sock_functions.c  sock_functions.h
main/: CMakeLists.txt  bot_server.c  client.c  symbols.h
record_list/: CMakeLists.txt  list_node_struct.h  record_linked_list.c  record_linked_list.h  user_struct.h
